# uaap

./: LICENSE  SPEC.md  pyproject.toml
src/uaap/: __init__.py  agent_auth.py  cli.py  mcp_server.py  revocation.py  server.py  verifier.py
src/uaap_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
