[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uaap-protocol"
version = "0.1.0"
description = "Universal Agent Authorization Protocol — the SSL/TLS of the AI agent economy"
authors = [{ name = "GadgetHumans", email = "scotia1973@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "httpx>=0.25",
    "py-multibase>=1.0",
    "pyld>=2.0",
]

[project.urls]
Homepage = "https://api.gadgethumans.com"
Documentation = "https://github.com/scotia1973-bot/uaap"
Repository = "https://github.com/scotia1973-bot/uaap"

[project.scripts]
uaap = "uaap.cli:main"
uaap-server = "uaap.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uaap"]
